# uv-workspace-example

./: .gitignore  pyproject.toml  ruff.toml  taplo.toml
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  postCreateCommand.sh
.devcontainer/initialize/: 001_generate_env.sh  002_generate_compose.sh  config.yml
.devcontainer/post_create/: .gitignore  001_install_task.sh  config.yml
.devcontainer/util/: run_scripts.py
1_path/: pyproject.toml
1_path/app/: pyproject.toml
1_path/libs/lib/: pyproject.toml
1_path/libs/lib-core/: pyproject.toml
2_workspace_without_project/: Dockerfile  pyproject.toml
2_workspace_without_project/app/: pyproject.toml
3_workspace_with_project/: pyproject.toml
3_workspace_with_project/libs/lib/: pyproject.toml
docker/: .gitignore  Dockerfile
docs/: zenn.md
example/: log_json.py  log_plain.py
libs/precise_logger/: pyproject.toml
libs/precise_logger/src/precise_logger/: __init__.py  fmt.py
libs/precise_logger/tests/: test_.py
libs/precise_logger_json/: pyproject.toml
libs/precise_logger_json/src/precise_logger_json/: __init__.py  fmt.py
libs/precise_logger_json/tests/: test_.py
scripts/: test.py
